-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.0.0
-
None
-
92db806aa8e7c0c40b265e3cf584d4aa85fc3ba5
Apparently QMutexLocker is now a templated class in Qt 6. This is not mentioned on https://doc.qt.io/qt-6/qtcore-changes-qt6.html and the QMutexLocker documentation still shows examples from Qt 5.
For Gerrit Dashboard: QTBUG-89429 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
326976,2 | Update QMutexLocker documentation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
331263,1 | Update QMutexLocker documentation | 6.0 | qt/qtbase | Status: ABANDONED | +2 | 0 |