src/corelib/doc/snippets/code/src_corelib_thread_qmutex.cpp
@@ -184,7 +184,7 @@ int complexFunction(int flag)
 class SignalWaiter
 {
 private:
-    QMutexLocker locker;
+    QMutexLocker<QMutex> locker;
 
 public:
     SignalWaiter(QMutex *mutex)
